kubernetes/apps/selfhosted/awx/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  annotations:
    cert-manager.io/cluster-issuer: gts-production
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
    external-dns.home.arpa/enabled: "true"
    external-dns.powerdns.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: ingress.${SECRET_DOMAIN}
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    # nginx.ingress.kubernetes.io/auth-url: |-
    #     http://ak-outpost-authentik-embedded-outpost.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    # nginx.ingress.kubernetes.io/auth-signin: /outpost.goauthentik.io/start?rd=$escaped_request_uri
    # nginx.ingress.kubernetes.io/auth-response-headers: |-
    #     Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    # nginx.ingress.kubernetes.io/auth-snippet: |
    #     proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: internal
  rules:
    - host: &host awx.${SECRET_DOMAIN}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: awx-service
              port:
                name: http
  tls:
    - hosts:
      - *host
      secretName: awx-ec-cert
